add AuthController file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,7 @@ spring.jpa.show-sql=true
 
 # ทำให้ SQL ที่แสดงออกมาอ่านง่ายขึ้น (จัดรูปแบบ)
 spring.jpa.properties.hibernate.format_sql=true
+
+# @Value("${tu.api.key}")
+private String tuApiKey;
+
