Develop API in the list of candidates.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.password=YourStrong@Passw0rd
 # Enable SQL logging for debugging (optional)
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServerDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
@@ -21,5 +21,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # @Value("${tu.api.key}")
-private String tuApiKey;
+#private String tuApiKey;
 
