fix thai and my events

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,30 @@
 spring.application.name=LogTUgether
 server.port=8081
-# Microsoft SQL Server configuration
+
+
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.datasource.url=jdbc:sqlserver://<host>[:<port>][;instanceName=<instance>][;databaseName=<db>][;property=value]
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=LoginDB;encrypt=true;trustServerCertificate=true;
-#spring.datasource.url=jdbc:sqlserver://DESKTOPVOH4EG1:1433;instanceName=SQLEXPRESS;databaseName=myDB1;encrypt=true;trustServerCertificate=true;
+
+
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=LoginDB;encrypt=true;trustServerCertificate=true;sendStringParametersAsUnicode=true
+
 spring.datasource.username=sa
 spring.datasource.password=YourStrong@Passw0rd
-# Enable SQL logging for debugging (optional)
-## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-#spring.jpa.hibernate.ddl-auto = create-drop
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServerDialect
-# Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
-# แสดงคำสั่ง SQL ใน Console
-spring.jpa.show-sql=true 
 
-# ทำให้ SQL ที่แสดงออกมาอ่านง่ายขึ้น (จัดรูปแบบ)
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true 
 spring.jpa.properties.hibernate.format_sql=true
 
-# @Value("${tu.api.key}")
-#private String tuApiKey;
+spring.jpa.properties.hibernate.connection.characterEncoding=UTF-8
+spring.jpa.properties.hibernate.connection.useUnicode=true
 
+
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
+
+
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
